# Ai-chess-with-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  debug_make_move.py  debug_moves.py  debug_search.py  debug_stalemate.py  demo.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_demo.py  run_tests.py  setup.py
.task/specs/chess-ai-website/: design.md  requirements.md  tasks.md
chess_engine/: __init__.py  config.py  exceptions.py
chess_engine/board/: __init__.py  board.py  move_generator.py
chess_engine/eval/: __init__.py  evaluation.py  weights.json
chess_engine/search/: __init__.py  minimax.py  quiescence.py  transposition.py  zobrist.py
chess_engine/tests/: __init__.py  test_board.py  test_comprehensive.py  test_eval.py  test_search.py
chess_engine/train/: __init__.py  dataset.py  trainer.py  tuner.py
chess_engine/uci/: __init__.py  uci_interface.py
chess_engine/utils/: __init__.py  logger.py
chess_web/backend/: requirements.txt
chess_web/backend/app/: __init__.py  main.py
chess_web/backend/app/api/: analysis_routes.py  chess_routes.py  websocket_routes.py
chess_web/backend/app/models/: __init__.py  chess_models.py  response_models.py
chess_web/backend/app/services/: __init__.py  analysis_service.py  chess_service.py  game_manager.py  learning_service.py  websocket_manager.py
chess_web/frontend/: index.html  tailwind.config.js  vite.config.ts
chess_web/frontend/src/: App.tsx  index.css  main.tsx
chess_web/frontend/src/hooks/: index.ts  useAnalysisApi.ts  useGameApi.ts
chess_web/frontend/src/services/: api.ts  index.ts  websocket.ts
chess_web/frontend/src/store/: analysisStore.ts  gameStore.ts  index.ts  themeStore.ts
docs/: API.md  INSTALLATION.md  TRAINING.md  TROUBLESHOOTING.md  USER_GUIDE.md
examples/: basic_usage.py  training_example.py  uci_example.py
(+29 files in other folders)
